--- a/second-part/index.html
+++ b/second-part/index.html
@@ -35,7 +35,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <a class="pull-left hidden-xs hidden-sm" href="#" onclick="menu.open()">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav list-unstyled">
                         <li class="m-r-20">
                             <img src="assets/images/icon-menu.png">
                         </li>
@@ -46,7 +46,7 @@
                     <img src="assets/images/brand-logo.png" alt="brand-logo">
                 </a>
                 <div class="pull-right">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav list-unstyled">
                         <li class="m-r-10">
                             <a href="#">MY ACCOUNT</a>
                         </li>
@@ -86,7 +86,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <a class="pull-left" href="#" onclick="menu.open()">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav list-unstyled">
                         <li>
                             <img class="icon icon-menu" src="assets/images/icon-menu.png">
                         </li>
@@ -96,7 +96,7 @@
                     <img src="assets/images/brand-logo.png" alt="brand-logo">
                 </a>
                 <div class="pull-right">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav list-unstyled">
                         <li class="m-r-10">
                             <img class="icon hover-pointer" src="assets/images/icon-search.png">
                         </li>
@@ -122,24 +122,24 @@
             <div class="row">
                 <ul class="list-menu list-unstyled">
                     <li>
-                        <h4>
+                        <h3>
                             <a href="#">Home</a>
-                        </h4>
+                        </h3>
                     </li>
                     <li>
-                        <h4>
+                        <h3>
                             <a href="#">Shop</a>
-                        </h4>
+                        </h3>
                     </li>
                     <li>
-                        <h4>
+                        <h3>
                             <a href="#">Sale</a>
-                        </h4>
+                        </h3>
                     </li>
                     <li>
-                        <h4>
+                        <h3>
                             <a href="#">Categories</a>
-                        </h4>
+                        </h3>
                     </li>
                     <li>
                         <h6>
@@ -229,9 +229,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-0.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -243,9 +241,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-1.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -257,9 +253,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-2.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -271,9 +265,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-3.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -285,9 +277,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-4.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -299,9 +289,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-5.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -338,9 +326,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-0.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -352,9 +338,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-1.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -366,9 +350,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-2.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -380,9 +362,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-3.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -394,9 +374,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-4.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -408,9 +386,7 @@
                     <div class="col-lg-6">
                         <a href="#" class="product-link">
                             <div class="product-image">
-                                <div class="overlay">
-                                    <span>VIEW DETAILS</span>
-                                </div>
+                                <div class="overlay"></div>
                                 <img class="img-responsive" src="assets/images/products-thumbnail-5.png" alt="...">
                             </div>
                             <div class="product-description">
@@ -538,7 +514,7 @@
                 <small class="text-uppercase">subscribe to our newsletter and get idr 50.000 off your first purchase</small>
             </div>
             <div class="social-media">
-                <ul>
+                <ul class="list-unstyled">
                     <li>
                         <a href="#">Facebook</a>
                     </li>
@@ -566,7 +542,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 
     <script>
 
