--- a/second-part/index.html
+++ b/second-part/index.html
@@ -95,7 +95,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/images/brand-logo.png" alt="brand-logo">
                 </a>
-                <div class="pull-right">
+                <!-- <div class="pull-right">
                     <ul class="navbar-nav list-unstyled">
                         <li class="m-r-10">
                             <img class="icon hover-pointer" src="assets/images/icon-search.png">
@@ -107,7 +107,7 @@
                             <b>0</b>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- / SM XS -->
@@ -115,7 +115,7 @@
 
     <!-- Overlay Menu -->
     <div class="nav-menu-overlay">
-        <div class="container-fluid container-default container-featured-products">
+        <div class="container-fluid container-default">
             <a href="#" onclick="menu.close()">
                 <img class="close-menu pull-right" src="assets/images/icon-close.png" alt="...">
             </a>
@@ -172,8 +172,7 @@
             <div class="col-lg-7">
                 <img class="img-responsive slider-main" src="assets/images/slider-image-0.png" alt="...">
                 <div class="slider-main-indicator">
-                    <span class="indicator-current">1</span>/
-                    <span class="indicator-total">4</span>
+                    <span class="indicator-current">1</span>/<span class="indicator-total">4</span>
                 </div>
             </div>
             <div class="col-lg-5">
