--- a/second-part/index.html
+++ b/second-part/index.html
@@ -95,19 +95,19 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/images/brand-logo.png" alt="brand-logo">
                 </a>
-                <!-- <div class="pull-right">
+                <div class="pull-right">
                     <ul class="navbar-nav list-unstyled">
-                        <li class="m-r-10">
+                        <li class="">
                             <img class="icon hover-pointer" src="assets/images/icon-search.png">
                         </li>
-                        <li class="m-r-5">
+                        <!-- <li class="m-r-5">
                             <img class="icon icon-bag hover-pointer" src="assets/images/icon-bag.png">
                         </li>
                         <li class="">
                             <b>0</b>
-                        </li>
+                        </li> -->
                     </ul>
-                </div> -->
+                </div>
             </div>
         </div>
         <!-- / SM XS -->
